updated the default

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
         <script src="static/js/app.js"></script>
         <link rel="stylesheet" href="static/css/bootstrap/css/bootstrap-lumen.css" />
         <link rel="stylesheet" href="static/css/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="static/css/font-reaction/font-reactions.css">
+        <link rel="stylesheet" href="../css/font-reaction/font-reactions.css">
     </head>
     <body  style="margin: 0 25px 0; padding: 0 15px 0;">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
