--- a/index.html
+++ b/index.html
@@ -85,8 +85,14 @@
 		 
 <pre>
 bower install ng-reactions
-</pre> <br>
-or alternatively download and include `ngreactions.js.js` after `angular.min.js`. <br>
+</pre> </br>
+or alternatively download and include `ngreactions.js.js` after `angular.min.js`. <br><br><br>
+
+Include the js ngreactions.js and font-reactions.css file in respective file<br>
+
+<pre style="background:#f9f9f9;color:#080808">&lt;<span style="color:#bf4f24">script</span> <span style="color:#bf4f24">src</span>=<span style="color:#0b6125">"../ngreactions.js"</span>>&lt;/<span style="color:#bf4f24">script</span>>
+&lt;<span style="color:#bf4f24">link</span> <span style="color:#bf4f24">rel</span>=<span style="color:#0b6125">"stylesheet"</span> <span style="color:#bf4f24">href</span>=<span style="color:#0b6125">"../css/font-reaction/font-reactions.css"</span>>
+</pre><br>
 
 Add the `ng-reactions` module as a dependency when creating your app, e.g. <br>
 
